      qudit layouts. Implemented the class(es):
          qpp::Lattice                 - Qudits on a multi-dimensional
                                         orthogonal grid
          qpp::PeriodicBoundaryLattice - Qudits on a multi-dimensional
                                         orthogonal grid with periodic boundary
                                         conditions
    - Added preliminary support for qASM. Requires a C++17-compliant compiler.

Version 1.3 - 25 July 2019
    - Minimum required CMake version is now 3.2
    - Added MSVC support for CMake
    - Updated Google Test to version 1.8.1
    - Added enum {RES, PROB, ST} in "constants.h" for using with std::get<> on
      the result of qpp::measure() etc.
    - Split the "classes/circuits.h" into "classes/circuits/circuits.h" and
      "classes/circuits/engines.h"
    - Added noisy quantum engine for non-correlated noise
    - Added noisy teleportation example (that uses a noisy quantum engine) in
      "examples/circuits/noisy_teleport_qubit_circuit.cpp"
    - Implemented qpp::QCircuit::
          QFT()            - Quantum Fourier Transform
          TFQ()            - inverse Quantum Fourier Transform
          get_gate_depth() - circuit gate depth
          add_qudit()      - adds qudit(s) on the fly
          add_dit()        - adds classical dit(s) on the fly
          add_circuit()    - adds a quantum circuit description to the current
                             one
          replicate()      - replicates (repeats) the current quantum circuit
                             description
    - Implemented qpp::Bit_circuit::
          get_gate_count() - classical reversible circuit gate count
          get_depth()      - classical reversible circuit gate depth

Version 1.2 - 10 February 2019
    - Added new function in "functions.h":
          qpp::normalize() - normalizes a state vector (ket or bra) or density
                             matrix
    - Added new functions in "number_theory.h":