@@ -24,7 +24,10 @@ In progress - pre-release
           qpp::PeriodicBoundaryLattice - Qudits on a multi-dimensional
                                          orthogonal grid with periodic boundary
                                          conditions
+    - Added support for non-destructive measurements in qpp::measure() and
+      qpp::measure_seq() from "instruments.h"
     - Added preliminary support for qASM. Requires a C++17-compliant compiler.
+      Still work in progress, may be buggy.
 
 Version 1.3 - 25 July 2019
     - Minimum required CMake version is now 3.2
